# SparkGPT

./: .gitignore  .replit  README.md  __init__.py  app.py  constants.py  creds.py  db_manage.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  session.py  setup_log.py  tailwind.config.js  tools.py  various_tools.py
sparkgpt/: db_manage.py  main.py  session.py
sparkgpt/database/: convo_handler.py  database_init.py  user_handler.py
sparkgpt/static/: prism.js
sparkgpt/utils/: creds.py
src/: __init__.py  app.py  constants.py  creds.py  database_handler.py  db_manage.py  entry_point.py  main.py  session.py  various_tools.py
src/database/: convo_handler.py
src/static/: script.js
src/static/css/: main.css
src/templates/: del_msg.html  error.html  login.html  panel.html
src/utils/: bitcoin_utils.py  chat_utils.py  creds.py  data_utils.py
src/utils/tasks/: data_structures.py  task_class.py  task_queue.py
static/: prism.css  prism.js  script.js  style.css
static/css/: main.css
templates/: chat.html  conv.html  error.html  index.html  login.html  panel.html  pay.html  signup.html
